executable('FactorioModDownloader', [
    'model/Version.vala',
    'model/Dependence.vala',
    'model/Mod.vala',
    'model/GameData.vala',
    'model/FactorioAPI.vala',
    'Controller.vala',
    'UI.vala',
    'Main.vala',
    ], dependencies: [
    dependency('glib-2.0'),
    dependency('gio-2.0'),
    dependency('libarchive'),
    dependency('gobject-2.0'),
    dependency('libsoup-2.4'),
    dependency('json-glib-1.0')
    ]
)